# raytracing-cpp

./: CMakeLists.txt  Makefile  README.md  compile_commands.json  raytracer
include/: CMakeLists.txt  RGB.h  light.h  object.cpp  object.h  plane.cpp  sphere.cpp  sphere.h
src/: CMakeLists.txt  Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  Image.cpp  Image.h  Light.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  Vector.cpp  Vector.h  main.cpp  object.cpp  object.h  plane.h  vector.cpp  vector.h
